Update encore.app config to TOML, add frontend path

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,15 @@
   "name": "backend",
   "version": "1.0.0",
   "type": "module",
+  "packageManager": "bun",
   "scripts": {
-    "dev": "node index.js",
-    "start": "node index.js",
-    "build": "echo \"No build step for backend\""
+    "build": "cd ../frontend \u0026\u0026 bun install \u0026\u0026 vite build --outDir=../backend/frontend/dist"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5"
+    "encore.dev": "^1.50.4",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "typescript": "^5.8.3"
   }
 }
