--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,49 +2,42 @@
   "name": "frontend",
   "version": "1.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --host --port $PORT"
-  },
+  "packageManager": "bun",
   "dependencies": {
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-radio-group": "^1.3.8",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-toast": "^1.2.15",
-    "@supabase/supabase-js": "^2.58.0",
-    "@tailwindcss/vite": "^4.1.13",
-    "@tanstack/react-query": "^5.90.2",
+    "@radix-ui/react-checkbox": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.2.4",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.72.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.484.0",
-    "react": "^19.1.1",
+    "react": "^19.0.0",
     "react-day-picker": "latest",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.3",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.14"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
-    "@tailwindcss/oxide": "^4.1.13",
-    "@tailwindcss/vite": "^4.1.13",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^4.7.0",
-    "lightningcss": "^1.30.2",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^5.9.2",
-    "vite": "^6.3.6"
+    "@tailwindcss/oxide": "^4.1.3",
+    "@tailwindcss/vite": "^4.1.3",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "lightningcss": "^1.29.2",
+    "tw-animate-css": "^1.2.5",
+    "typescript": "^5.8.3",
+    "vite": "^6.2.5"
   },
   "optionalDependencies": {
-    "rollup": "^4.52.3"
+    "rollup": "^4.39.0"
   }
 }
-
-
-
