--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,11 @@
   "type": "module",
   "packageManager": "bun",
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@supabase/supabase-js": "^2.56.1",
