--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/oxide": "^4.1.13",
+    "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^4.7.0",
