--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-label": "^2.2.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
@@ -34,4 +34,15 @@
   "devDependencies": {
     "@tailwindcss/oxide": "^4.1.13",
     "@tailwindcss/vite": "^4.1.13",
-    "@types/react": "^19.1.16
+    "@types/react": "^19.1.16",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^4.7.0",
+    "lightningcss": "^1.30.2",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.2",
+    "vite": "^6.3.6"
+  },
+  "optionalDependencies": {
+    "rollup": "^4.52.3"
+  }
+}
