--- a/backend/package.json
+++ b/backend/package.json
@@ -2,15 +2,17 @@
   "name": "backend",
   "version": "1.0.0",
   "type": "module",
-  "packageManager": "bun",
   "scripts": {
-    "build": "cd ../frontend \u0026\u0026 bun install \u0026\u0026 vite build --outDir=../backend/frontend/dist"
+    "dev": "node index.js",
+    "start": "node index.js",
+    "build": "echo \"No build step for backend\""
   },
   "dependencies": {
-    "encore.dev": "^1.50.0",
-    "jsonwebtoken": "^9.0.2"
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "typescript": "^5.9.2"
+    "nodemon": "^3.1.0"
   }
 }
