--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
   "workspaces": [
     "backend",
     "frontend"
-  ]
+  ],
+  "scripts": {
+    "dev": "cd frontend && bun run dev",
+    "build": "cd frontend && bun run build",
+    "start": "cd frontend && bun run preview -- --port $PORT"
+  }
 }
