--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "dev": "cd frontend && bun run dev",
     "build": "cd frontend && bun run build",
-    "start": "cd frontend && bunx vite preview --host --port $PORT"
+    "start": "cd frontend && bun run preview"
   }
 }
+
 
