--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,9 +43,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 3000"
   },
   "engines": {
-    "node": "18.x"
+    "node": ">=18.0.0"
   }
 }
+
