--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,10 +43,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 3000"
+    "start": "vite preview --port 3000"
   },
   "engines": {
     "node": ">=18.0.0"
   }
 }
+
 
