--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "packageManager": "bun",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "start": "vite preview --host 0.0.0.0 --port $PORT"
+  },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.7",
@@ -39,11 +44,6 @@
   },
   "optionalDependencies": {
     "rollup": "^4.39.0"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "start": "vite preview --port 3000"
   },
   "engines": {
     "node": ">=18.0.0"
