--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
+    "serve": "^14.2.1",
     "@tailwindcss/oxide": "^4.1.3",
     "@tailwindcss/vite": "^4.1.3",
     "@types/react": "^19.0.8",
