--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "serve -s dist -l $PORT"
+    "start": "vite preview --host 0.0.0.0 --port 10000"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.5",
@@ -32,7 +32,6 @@
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
-    "serve": "^14.2.1",
     "@tailwindcss/oxide": "^4.1.3",
     "@tailwindcss/vite": "^4.1.3",
     "@types/react": "^19.0.8",
@@ -50,5 +49,6 @@
     "node": ">=18.0.0"
   }
 }
+
 
 
