--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "vite preview --host 0.0.0.0 --port 10000"
+    "start": "serve -s dist -l 10000"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.5",
