--- a/render.yaml
+++ b/render.yaml
@@ -2,24 +2,21 @@ services:
   - type: static
     name: hic-system
     rootDir: frontend
-    buildCommand: "npm install && npm run build"
+    buildCommand: npm install && npm run build
     publishPath: dist
 
     routes:
       - type: rewrite
-        source: "/*"
-        destination: "/index.html"
+        source: /*
+        destination: /index.html
 
     envVars:
       - key: VITE_API_URL
-        value: ${VITE_API_URL}
-
+        sync: false
       - key: VITE_API_BASE_URL
-        value: ${VITE_API_BASE_URL}
-
+        sync: false
       - key: VITE_SUPABASE_URL
-        value: ${VITE_SUPABASE_URL}
-
+        sync: false
       - key: VITE_SUPABASE_ANON_KEY
-        value: ${VITE_SUPABASE_ANON_KEY}
+        sync: false
 
