--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ encore.gen.cue
 /.encore
 node_modules
 /encore.gen
+
+# Ignore environment variable files
+.env
+.env.*
+frontend/.env
+frontend/.env.*
+
