--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,6 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toast": "^1.2.6",
     "@supabase/supabase-js": "^2.58.0",
-    "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.72.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,17 +27,17 @@
     "react-day-picker": "latest",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.3"
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@tailwindcss/oxide": "^4.1.3",
-    "@tailwindcss/vite": "^4.1.3",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.22",
     "lightningcss": "^1.29.2",
-    "tw-animate-css": "^1.2.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.8.3",
     "vite": "^6.2.5"
   },
@@ -49,4 +48,3 @@
     "node": ">=18.0.0"
   }
 }
-
