Save local changes before rebase

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "type": "module",
   "packageManager": "bun",
   "scripts": {
-    "build": "cd ../frontend \u0026\u0026 bun install \u0026\u0026 vite build --outDir=../backend/frontend/dist"
+    "build": "cd ../frontend && bun install && vite build --outDir=../backend/frontend/dist"
   },
   "dependencies": {
-    "encore.dev": "^1.50.4",
+    "encore.dev": "^1.52.1",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
