Fix broken quotes in backend build script

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "packageManager": "bun",
   "scripts": {
-    "build": "echo 'Backend build complete\""
+    "build": "echo \"Backend build complete\""
   },
   "dependencies": {
     "encore.dev": "^1.52.1",
