--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,50 +1,33 @@
 {
   "name": "frontend",
-  "version": "1.0.0",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "packageManager": "bun",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "start": "serve -s dist -l 10000"
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-checkbox": "^1.1.5",
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.2.4",
-    "@radix-ui/react-select": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-toast": "^1.2.6",
-    "@supabase/supabase-js": "^2.58.0",
-    "@tanstack/react-query": "^5.72.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.484.0",
-    "react": "^19.0.0",
-    "react-day-picker": "latest",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0",
-    "tailwind-merge": "^3.2.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/oxide": "^4.1.3",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@eslint/js": "^9.39.1",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
-    "lightningcss": "^1.29.2",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
-    "typescript": "^5.8.3",
-    "vite": "^6.2.5"
-  },
-  "optionalDependencies": {
-    "rollup": "^4.39.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "tailwindcss": "^4.1.17",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.4",
+    "vite": "^7.2.4"
   }
 }
