--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,17 @@
- services:
+services:
   - type: static
     name: hic-system-clean
     rootDir: frontend
-    buildCommand: npm install && npm run build
+
+    buildCommand: |
+      npm install
+      npm run build
+
     publishPath: dist
 
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
-
     envVars:
+      - key: NODE_VERSION
+        value: 20.19.0
       - key: VITE_API_BASE_URL
         sync: false
       - key: VITE_SUPABASE_URL
@@ -18,3 +19,7 @@
       - key: VITE_SUPABASE_ANON_KEY
         sync: false
 
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
